--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           </h3>
           <h2>INSPIRATION:</h2>
           <h3>
-  This project was inspired by the fact that an original xpilot agent, which used fuzzy logic and a production system was performing super well against others relatively slow and unintelligent agents, but as it plays against smarter and evolved agents that moved relatively faster, it did poorly. Moreover, the authors were inspired by a certain paper by Andrew Hubley and Gary Parker titled “Using A Fuzzy Logic Control System For An Xpilot Combat Agent.”
-</h3>
+            This project was inspired by the fact that an original xpilot agent, which used fuzzy logic and a production system was performing super well against others relatively slow and unintelligent agents, but as it plays against smarter and evolved agents that moved relatively faster, it did poorly. Moreover, the authors were inspired by a certain paper by Andrew Hubley and Gary Parker titled <a src = https://www.researchgate.net/publication/224204723_Using_a_fuzzy_logic_control_system_for_an_Xpilot_combat_agent> “Using A Fuzzy Logic Control System For An Xpilot Combat Agent.”</a>
+          </h3>
 
         TEAM: MATHIEU VINGEAULT, MAHDIA DAQIQ
         <p id='pleft'>
