--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <body>  
   <header>
     <nav>
-      <figure>
-        <a href="index.html">
-          <img src="#">
-        </a>
-      </figure>
+      <div class="pyramid3d">
+        <div class="triangle side1"></div>
+        <div class="triangle side2"></div>
+        <div class="triangle side3"></div>
+        <div class="triangle side4"></div>
+      </div>
 
       <h1><p>Peggotty Investment Club</p></h1>
 
