--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 <body>  
   <header>
     <nav>
-      <div class="pyramid3d">
-        <div class="triangle side1"></div>
-        <div class="triangle side2"></div>
-        <div class="triangle side3"></div>
-        <div class="triangle side4"></div>
+      <div class="stage">
+        <div class="pyramid3d">
+          <div class="triangle side1"></div>
+          <div class="triangle side2"></div>
+          <div class="triangle side3"></div>
+          <div class="triangle side4"></div>
+        </div>
       </div>
 
       <h1><p>Peggotty Investment Club</p></h1>
