--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
 <body>  
   <header>
     <nav>
-      <div class="stage">
-        <div class="pyramid3d">
-          <div class="triangle side1"></div>
-          <div class="triangle side2"></div>
-          <div class="triangle side3"></div>
-          <div class="triangle side4"></div>
-        </div>
-      </div>
+      <figure>
+        <a href="index.html">
+          <img src="images/Peggotty_Investment_Club_logo2.png">
+        </a>
+      </figure>
 
       <h1><p>Peggotty Investment Club</p></h1>
 
