--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <ul>
           <li>Project <i class="fa fa-caret-down"></i>
             <ul> 
-              <a href="#Description">Description</a>
-              <a href="#Inspiration">Inspiration</a>
-              <a href="#team">Team</a>
+              <a href="index.html#Description">Description</a>
+              <a href="index.html#Inspiration">Inspiration</a>
+              <a href="index.html#team">Team</a>
             </ul>
           </li>
           <li>Process<i class="fa fa-caret-down"></i>
