--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div id="about">
         <h1>
           <div style='float:left; margin-bottom:20px;'>
-            Evolving xpilot agent with a production system and fuzzy logic
+            An Evolving Xpilot Fuzzy Agent
           </div>
           <div class="stage">
             <div class="pyramid3d">
@@ -58,8 +58,7 @@
         </h1>
 
         <h3 style='clear:both' class="subhead" id="Description">
-         This project consists of using evolving an xpilot agent that has a production system and some fuzzy logic. Two separate Genetic Algorithms will be used; one on the variables inside the production system and one used on the fuzzy logic functions values. The goal is to see how the xpilot agent would evolve depending on the type of opponent it plays against. It will be tested  twice on 2 different sets. The first time, it would play against two different types of opponent; a more defensive agent, a more aggressive. Both opposing agents so move at relatively the same speed, but their decision making should be totally different. On the second set, it will play against two agents again, but this time one slow/non-moving agent and then against a fast moving agent. As of now, some important factors remains to be decided such as the fitness function and the exact rules of the game. As the project moves along, an update will be posted. The map should be just the simple map for now as it has less obstacle and therefore gives more room to focus on the opponent. Some results analysis will then be made to see how the agent evolved against the different opponents. Moreover, some more analysis on how well it was able to do and long it took to evolve. 
-       </h3></h3>>
+          The project consists of creating an xpilot fuzzy agent and make the fuzzy sets adaptable to various situations, maps, opponents. The fuzzy agent utilizes a genetic algorithm to evolve over time in the goal of staying alive as long as possible. Staying alive involve the need for killing, hiding, avoiding walls and avoiding bullets. The ultimate goal of the agent is to win, by being the last one staying no matter what it is facing because of its ability to adapt and its use of fuzzy logic.       </h3></h3>>
        <h2 id="Inspiration">INSPIRATION:</h2>
        <h3>
         This project was inspired by the fact that an original xpilot agent, which used fuzzy logic and a production system was performing super well against others relatively slow and unintelligent agents, but as it plays against smarter and evolved agents that moved relatively faster, it did poorly. A certain paper by Andrew Hubley and Gary Parker titled <a src = https://www.researchgate.net/publication/224204723_Using_a_fuzzy_logic_control_system_for_an_Xpilot_combat_agent> “Using A Fuzzy Logic Control System For An Xpilot Combat Agent.”</a> made it clear that most of the time, fuzzy logic systems need some adjustments especially at the level of their functions. The idea of using genetic algorithms to solve this problem of adjustments came up. A paper from Plerou, Vlamou, Papadopoulos written in 2016 called <a src = https://www.researchgate.net/publication/312212400_Fuzzy_Genetic_Algorithms_Fuzzy_Logic_Controllers_and_Genetics_Algorithms>"Fuzzy Genetic Algorithms:
