--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
           </li>
           <li>Process<i class="fa fa-caret-down"></i>
             <ul>
-              <a href="Portfolio_Performance.html">Methods</a>
-              <a href="#">Challenges</a>
+              <a href="process.html">Methods</a>
+              <a href="process.html">Challenges</a>
             </ul>
           </li>
           <li>Results <i class="fa fa-caret-down"></i>
             <ul>
-              <a href="Password_Resources.html">Videos</a>
-              <a href="Password_Resources.html">Graphs</a>
+              <a href="result.html">Videos</a>
+              <a href="result.html">Graphs</a>
             </ul>
           </li>
         </ul>
