--- a/process.html
+++ b/process.html
@@ -40,3 +40,20 @@
       </div>
     </nav>
   </header>
+  <div id="container">
+    <div id="content">
+      <div id="about">
+
+        <div >
+            <ul>
+            <li class="bullets">Dumpster - An Evolving Xpilot Fuzzy Agent</li> 
+            <li class="bullets">Rabbit - Xpilot Offensive Agent</li> 
+            <li class="bullets">Tiger King - Xpilot Defensive Agent</li> 
+        </ul>
+        </div>
+          
+      </div>
+      </div>
+      </div>
+
+</body>
