--- a/result.html
+++ b/result.html
@@ -40,3 +40,12 @@
       </div>
     </nav>
   </header>
+  <div id="container">
+    <div id="content">
+      <div id="about">
+    <img src="grapghRabbit.jpeg" alt="Computer Man" style="width:100%;height:70%;">
+      </div>
+      </div>
+      </div>
+
+  </body>
