--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </a>
       </figure>
 
-      <h1><p>Research</p></h1>
+      <h1><p>AN EVOLVING XPILOT FUZZY AGENT</p></h1>
 
       <div class="DropDown-Menu">
         <ul>
