--- a/index.html
+++ b/index.html
@@ -13,27 +13,26 @@
         </a>
       </figure>
 
-      <h1><p>AN EVOLVING XPILOT FUZZY AGENT</p></h1>
+      <h1><p>Research</p></h1>
 
       <div class="DropDown-Menu">
         <ul>
           <li>Project <i class="fa fa-caret-down"></i>
             <ul> 
-              <a href="index.html#Description">Description</a>
-              <a href="index.html#Inspiration">Inspiration</a>
-              <a href="index.html#team">Team</a>
+              <a href="descrption.html">Description</a>
+              <a href="reference.html">Reference</a>
+              <a href="aboutUs.html">About Us</a>
             </ul>
           </li>
-          <li>Process<i class="fa fa-caret-down"></i>
+          <li>Methods<i class="fa fa-caret-down"></i>
             <ul>
-              <a href="process.html">Methods</a>
-              <a href="process.html">Challenges</a>
+              <a href="step-By-Step.html">Step-By-Step</a>
             </ul>
           </li>
           <li>Results <i class="fa fa-caret-down"></i>
             <ul>
-              <a href="result.html">Videos</a>
-              <a href="result.html">Graphs</a>
+              <a href="data.html">Data</a>
+              <a href="conclusion.html">Conclusion</a>
             </ul>
           </li>
         </ul>
@@ -58,8 +57,7 @@
         </h1>
 
         <h3 style='clear:both' class="subhead" id="Description">
-          The project consists of creating an xpilot fuzzy agent and make the fuzzy sets adaptable to various situations, maps, opponents. The fuzzy agent utilizes a genetic algorithm to evolve over time in the goal of staying alive as long as possible. Staying alive involve the need for killing, hiding, avoiding walls and avoiding bullets. The ultimate goal of the agent is to win, by being the last one staying no matter what it is facing because of its ability to adapt and its use of fuzzy logic.       
-        </h3>
+          The project consists of creating an xpilot fuzzy agent and make the fuzzy sets adaptable to various situations, maps, opponents. The fuzzy agent utilizes a genetic algorithm to evolve over time in the goal of staying alive as long as possible. Staying alive involve the need for killing, hiding, avoiding walls and avoiding bullets. The ultimate goal of the agent is to win, by being the last one staying no matter what it is facing because of its ability to adapt and its use of fuzzy logic.       </h3></h3>>
        <h2 id="Inspiration">INSPIRATION:</h2>
        <h3>
         This project was inspired by the fact that an original xpilot agent, which used fuzzy logic and a production system was performing super well against others relatively slow and unintelligent agents, but as it plays against smarter and evolved agents that moved relatively faster, it did poorly. A certain paper by Andrew Hubley and Gary Parker titled <a src = https://www.researchgate.net/publication/224204723_Using_a_fuzzy_logic_control_system_for_an_Xpilot_combat_agent> “Using A Fuzzy Logic Control System For An Xpilot Combat Agent.”</a> made it clear that most of the time, fuzzy logic systems need some adjustments especially at the level of their functions. The idea of using genetic algorithms to solve this problem of adjustments came up. A paper from Plerou, Vlamou, Papadopoulos written in 2016 called <a src = https://www.researchgate.net/publication/312212400_Fuzzy_Genetic_Algorithms_Fuzzy_Logic_Controllers_and_Genetics_Algorithms>"Fuzzy Genetic Algorithms:
