--- a/step-By-Step.html
+++ b/step-By-Step.html
@@ -19,23 +19,23 @@
         <ul>
           <li>Project <i class="fa fa-caret-down"></i>
             <ul> 
-              <a href="index.html#Description">Description</a>
-              <a href="index.html#Inspiration">Inspiration</a>
-              <a href="index.html#team">Team</a>
+              <a href="descrption.html">Description</a>
+              <a href="reference.html">Reference</a>
+              <a href="aboutUs.html">About Us</a>
             </ul>
           </li>
-          <li>Process<i class="fa fa-caret-down"></i>
+          <li>Methods<i class="fa fa-caret-down"></i>
             <ul>
-                <a href="process.html">Methods</a>
-                <a href="process.html">Challenges</a>
-              </ul>
-            </li>
-            <li>Results <i class="fa fa-caret-down"></i>
-              <ul>
-                <a href="result.html">Videos</a>
-                <a href="result.html">Graphs</a>
-              </ul>
+              <a href="step-By-Step.html">Step-By-Step</a>
+            </ul>
           </li>
+          <li>Results <i class="fa fa-caret-down"></i>
+            <ul>
+              <a href="data.html">Data</a>
+              <a href="conclusion.html">Conclusion</a>
+            </ul>
+          </li>
+        </ul>
         </ul>
       </div>
     </nav>
