--- a/step-By-Step.html
+++ b/step-By-Step.html
@@ -13,7 +13,7 @@
         </a>
       </figure>
 
-      <h1><p>Research</p></h1>
+      <h1><p>AN EVOLVING XPILOT FUZZY AGENT</p></h1>
 
       <div class="DropDown-Menu">
         <ul>
@@ -36,7 +36,6 @@
             </ul>
           </li>
         </ul>
-        </ul>
       </div>
     </nav>
   </header>
@@ -45,15 +44,15 @@
       <div id="about">
 
         <div >
-            <ul>
+          <ul>
             <li class="bullets">Dumpster - An Evolving Xpilot Fuzzy Agent</li> 
             <li class="bullets">Rabbit - Xpilot Offensive Agent</li> 
             <li class="bullets">Tiger King - Xpilot Defensive Agent</li> 
-        </ul>
+          </ul>
         </div>
-          
+        
       </div>
-      </div>
-      </div>
+    </div>
+  </div>
 
 </body>
