--- a/descrption.html
+++ b/descrption.html
@@ -13,30 +13,26 @@
         </a>
       </figure>
 
-      <h1><p>Research</p></h1>
+      <h1><p>AN EVOLVING XPILOT FUZZY AGENT</p></h1>
 
       <div class="DropDown-Menu">
         <ul>
           <li>Project <i class="fa fa-caret-down"></i>
+            <ul> 
+              <a href="descrption.html">Description</a>
+              <a href="reference.html">Reference</a>
+              <a href="aboutUs.html">About Us</a>
+            </ul>
+          </li>
+          <li>Methods<i class="fa fa-caret-down"></i>
             <ul>
-              <li>Project <i class="fa fa-caret-down"></i>
-                <ul> 
-                  <a href="descrption.html">Description</a>
-                  <a href="reference.html">Reference</a>
-                  <a href="aboutUs.html">About Us</a>
-                </ul>
-              </li>
-              <li>Methods<i class="fa fa-caret-down"></i>
-                <ul>
-                  <a href="step-By-Step.html">Step-By-Step</a>
-                </ul>
-              </li>
-              <li>Results <i class="fa fa-caret-down"></i>
-                <ul>
-                  <a href="data.html">Data</a>
-                  <a href="conclusion.html">Conclusion</a>
-                </ul>
-              </li>
+              <a href="step-By-Step.html">Step-By-Step</a>
+            </ul>
+          </li>
+          <li>Results <i class="fa fa-caret-down"></i>
+            <ul>
+              <a href="data.html">Data</a>
+              <a href="conclusion.html">Conclusion</a>
             </ul>
           </li>
         </ul>
@@ -48,15 +44,15 @@
       <div id="about">
 
         <div >
-            <ul>
+          <ul>
             <li class="bullets">Dumpster - An Evolving Xpilot Fuzzy Agent</li> 
             <li class="bullets">Rabbit - Xpilot Offensive Agent</li> 
             <li class="bullets">Tiger King - Xpilot Defensive Agent</li> 
-        </ul>
+          </ul>
         </div>
-          
+        
       </div>
-      </div>
-      </div>
+    </div>
+  </div>
 
 </body>
