--- a/aboutUs.html
+++ b/aboutUs.html
@@ -13,7 +13,7 @@
         </a>
       </figure>
 
-      <h1><p>Research</p></h1>
+      <h1><p>AN EVOLVING XPILOT FUZZY AGENT</p></h1>
 
       <div class="DropDown-Menu">
         <ul>
@@ -42,9 +42,9 @@
   <div id="container">
     <div id="content">
       <div id="about">
-    <img src="grapghRabbit.jpeg" alt="Computer Man" style="width:100%;height:70%;">
+        <img src="grapghRabbit.jpeg" alt="Computer Man" style="width:100%;height:70%;">
       </div>
-      </div>
-      </div>
+    </div>
+  </div>
 
-  </body>
+</body>
