--- a/aboutUs.html
+++ b/aboutUs.html
@@ -48,7 +48,7 @@
       <ul class "Table_Row">
         <li><div class="Member">
           <figure>
-            <img src="images/MathVign.jpg">
+            <img src="images/MathVign.png">
             <figcaption>Mathieu Vigneault '20<br /><i>Computer Science Major</i></figcaption> 
           </figure>
         </div></li>
