About Us Page Update

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -55,8 +55,8 @@
 
         <li><div class="Member">
           <figure>
-            <img src="images/Avery_Gobbo.jpg">
-            <figcaption>Mahdia Daqiq'21<br /><i>Computer Science Major</i></figcaption>
+            <img src="images/MahdiaDaqiq.jpg">
+            <figcaption>Mahdia Daqiq'23<br /><i>Computer Science Major</i></figcaption>
           </figure>
         </div></li>
       </ul>
