About Us Page Update

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -41,12 +41,12 @@
     </nav>
   </header>
   <main class = "main">
-    <div id="Block1">
+    <div class="Block1">
       <h1> Who We Are </1>
         <p> The research was done by two Connecticut College students in the hope of winning in-class round-robin tournaments. The round robin tournaments consisted of multiple xpilot agents. Each agent was controlled by a team of students. The tournaments required each agent to play against one another for a specific amount of time. When the time was up, the agent with the most score would win. To win the tournament an agent had to have the best record. The agent based on fuzzy logic owned by the two researchers above did extremely well in the first few tournaments, but as the other teams started to evolve their agents into much better opponents the task of winning the tournament became much more difficult. After some consultations, it was determined that the fuzzy agent was doing extremely well against relatively slow and defensive opponents. However, it was a totally different story when it played against super aggressive agents with constant high speed. The idea of making the agent fuzzy sets change over time depending on who the agent is playing against emerged from these contemplations. 
         </p>
       </div>
-      <div id="Block2">
+      <div class="Block2">
         <ul class "Table_Row">
           <li><div class="Member">
             <figure>
