--- a/data.html
+++ b/data.html
@@ -42,7 +42,13 @@
   <div id="container">
     <div id="content">
       <div id="about">
-    <img src="grapghRabbit.jpeg" alt="Computer Man" style="width:100%;height:70%;">
+        <iframe width="100%" height="70%" src="https://www.youtube.com/embed/GnpRYmXb44c">
+        </iframe>
+        <br>
+        <br>
+        <br>
+    <img src="Rabbit_Learning.png" alt="Computer Man" style="width:100%;height:70%;">
+
       </div>
       </div>
       </div>
