--- a/step-By-Step.html
+++ b/step-By-Step.html
@@ -57,7 +57,9 @@
     </p> 
     <h2>Dumpster -- Imploying a GA to Fuzzy Sets</h2>
     <p> Dumpster was already a fuzzy agent that worked well for the simple.xp map in xpilot. It has proven itself many times as it won one of the in-class round-robin tournaments. The challenge here was to implement a genetic algorithm on its already formed fuzzy sets. Dumpster had two fuzzy sets: one for closing rate and one for distance from the wall. The fuzzy set for closing rate was based off tracking as well as speed was made of three variables: slow, medium and fast. As for the distance from the wall it had only 2 different variables: close, far. The goal was to make the fuzzy sets take all sort of different value range to eventually figure out which of all possible values where the best ones to define each variables with the fuzzy sets. Although some freedom was wanted, some limits also needed to bee respected. For example, the slow variable should not have a higher value than the fast variable, as it does not make any sense. Therefore, some key rules were implemented to make the fuzzy sets respectable while also having some freedom in their range of values. The first rule was that the variables should stay in their respective order. The second rule was that the membership of each variable should be somewhat fuzzy and not binary. The third and final restriction was that each set should have a membership at all times. The implementation of the fuzzy agent happened relatively smootly. First, we set the key values for each variable (when membership is 1 and when membership is 0). The top values were set first and the bottom values were than set based-off the top ones. The goal was then to train the agent against a defensive smart agent and an aggresive one to see how it would adjust its fuzzy sets. 
-    </p> 
+    </p>
+    <h2>Training of Agents</h2>
+    <p> The training was done using an ubuntu machine. It was not the best scenario as   
   </div>
 
 </body>
