--- a/conclusion.html
+++ b/conclusion.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>  
-  <header>
+   <header>
     <nav>
       <figure>
         <a href="index.html">
@@ -14,7 +14,7 @@
         </a>
       </figure>
 
-      <h1><p>Research</p></h1>
+      <h1><p>AN EVOLVING XPILOT FUZZY AGENT</p></h1>
 
       <div class="DropDown-Menu">
         <ul>
@@ -40,12 +40,4 @@
       </div>
     </nav>
   </header>
-  <div id="container">
-    <div id="content">
-      <div id="about">
-    <img src="grapghRabbit.jpeg" alt="Computer Man" style="width:100%;height:70%;">
-      </div>
-      </div>
-      </div>
-
   </body>
