step page fixing

--- a/step-By-Step.html
+++ b/step-By-Step.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <link href="web.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="main_style.css">
+  <link rel="stylesheet" type="text/css" href="step-By-Step.css">
 </head>
 <body>  
   <header>
@@ -39,10 +40,7 @@
       </div>
     </nav>
   </header>
-  <div id="container">
-    <div id="content">
-      <div id="about">
-  <div id="Step-Step">
+  <div class="Step-Step">
     <h1>Detailed Process of Project</h1>
     <h2>Make a plan</h2>
     <p> The first and most important thing we did as a team is divide the entire project into different smaller problems and assigned these to one another based on our strengths. It was determine that we should begin by making the opposing agents that our fuzzy logic agent played against. After consultation, it was set that we would have to make three different agents: one aggressive smart agent, one defensive smart agent, and one fuzzy agent that would use a genetic algorith. These agents were named "TigerKing", "Rabbit" and "Dumpster" respectively. 
@@ -64,9 +62,6 @@
     <h2>Training of Agents</h2>
     <p> The training was done using an ubuntu machine. It was not the best scenario as our team was obligated to use a VPN on our Macbook machine to get to a PC machine on Connecticut College campus, which had an ubuntu machine installed on it. The overall system was extremely laggy as Xpilot ran extremely slow compared to the usual. Thee usual refers here to the Linux machine available on college's campus. 
     </p> 
-  </div>
-  </div>
-  </div>
   </div>
 
 </body>
