error fixing grammar

--- a/step-By-Step.html
+++ b/step-By-Step.html
@@ -42,7 +42,7 @@
   </header>
   <div class="Step-Step">
     <h1>Detailed Process of Project</h1>
-    <h2>Make a plan</h2>
+    <h2>Planification of Project</h2>
     <p> The first and most important thing we did as a team is divide the entire project into different smaller problems and assigned these to one another based on our strengths. It was determine that we should begin by making the opposing agents that our fuzzy logic agent played against. After consultation, it was set that we would have to make three different agents: one aggressive smart agent, one defensive smart agent, and one fuzzy agent that would use a genetic algorith. These agents were named "TigerKing", "Rabbit" and "Dumpster" respectively. 
     </p>
     <ul>
