--- a/data.html
+++ b/data.html
@@ -46,6 +46,9 @@
         </iframe>
         <br>
         <br>
+        <p style="text-align: center;">The video above shows Rabbit during its training process. Each new round the best traits are being carried over to achieve the fittest chromosome. </p>
+        <br>
+        <br>
         <br>
         <br>
         <br>
@@ -53,7 +56,19 @@
 
     <img src="Rabbit_Learning.png" alt="Computer Man" style="width:100%;height:70%;">
     <br>
+    <br>
+    <p style="text-align: center;">The graph shows the learning curve of Rabbit while training. Rabbit stops improving when its average fitness is around 2000. Afterward, no significant improvement is being made. This can be due to the fact that the rabbit really excels in one area and so it doesn't need to learn more. It is also the case that there is not a significant variation in the population after a while so there is a capacity for how much Rabbit can learn. The fluctuation in the graph later in the learning process could be because of mutation or if Rabbit did something it never did before and carried that trait to the next generation. </p>
+    <br>
         <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+    <img src="chrom.jpeg" alt="Computer Man" style="width:100%;height:70%;">
+    <br>
+        <br>
+        <p style="text-align: center;"> Through training Rabbit against an Xpilot agent, we were able to retrieve the chromosome with the highest fitness score. This implies that through the generations the robot was being tested this chromosome was able to stay alive the longest and do the best against its opponents. To keep this chromosome, we are assigning its values to our agent, Rabbit as shown Above. </p>
         <br>
 
       </div>
