--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <link href="web.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="main_style.css">
+
 </head>
 <body>  
   <header>
@@ -42,33 +43,27 @@
   <div id="container">
     <div id="content">
       <div id="about">
-        <h1>
-          <div style='float:left; margin-bottom:20px;'>
-            An Evolving Xpilot Fuzzy Agent
+        <h1 style="text-align: center;" class="title">
+          <div style='float:center; margin-bottom:20px;'>
+           AN EVOLVING XPILOT FUZZY AGENT
           </div>
-          <div class="stage">
-            <div class="pyramid3d">
-              <div class="triangle side1"></div>
-              <div class="triangle side2"></div>
-              <div class="triangle side3"></div>
-              <div class="triangle side4"></div>
-            </div>
-          </div> 
+
+          <!-- <div class="stage"> -->
+            <!-- <div class="pyramid3d"> -->
+              <!-- <div class="triangle side1"></div> -->
+              <!-- <div class="triangle side2"></div> -->
+              <!-- <div class="triangle side3"></div> -->
+              <!-- <div class="triangle side4"></div> -->
+            <!-- </div> -->
+          <!-- </div>  -->
         </h1>
+        <img src="animated.GIF" alt="Computer Man" style="width:100%;height:84%;">
 
-        <h3 style='clear:both' class="subhead" id="Description">
-          The project consists of creating an xpilot fuzzy agent and make the fuzzy sets adaptable to various situations, maps, opponents. The fuzzy agent utilizes a genetic algorithm to evolve over time in the goal of staying alive as long as possible. Staying alive involve the need for killing, hiding, avoiding walls and avoiding bullets. The ultimate goal of the agent is to win, by being the last one staying no matter what it is facing because of its ability to adapt and its use of fuzzy logic.
-        </h3>
-        <h2 id="Inspiration">INSPIRATION:</h2>
-        <h3>
-          This project was inspired by the fact that an original xpilot agent, which used fuzzy logic and a production system was performing super well against others relatively slow and unintelligent agents, but as it plays against smarter and evolved agents that moved relatively faster, it did poorly. A certain paper by Andrew Hubley and Gary Parker titled <a src = https://www.researchgate.net/publication/224204723_Using_a_fuzzy_logic_control_system_for_an_Xpilot_combat_agent> “Using A Fuzzy Logic Control System For An Xpilot Combat Agent.”</a> made it clear that most of the time, fuzzy logic systems need some adjustments especially at the level of their functions. The idea of using genetic algorithms to solve this problem of adjustments came up. A paper from Plerou, Vlamou, Papadopoulos written in 2016 called <a src = https://www.researchgate.net/publication/312212400_Fuzzy_Genetic_Algorithms_Fuzzy_Logic_Controllers_and_Genetics_Algorithms>"Fuzzy Genetic Algorithms:
-          Fuzzy Logic Controllers and Genetics Algorithms"</a>reaffirm that GAs can be used to solve the problem of adjusting the fuzzy functions. 
-        </h3>
         <br>
-        <p id='pleft'>
-
-        </p>
-        <div id="team">Team members: MATHIEU VINGEAULT, MAHDIA DAQIQ</div> 
+        <br>
+        <br>
+        <p style="text-align: center; font-size: 30px;" > Authors: Mathieu Vigneault, Mahdia Daqiq</p>
+        <br>       
       </div>
     </div></div>
   </div>
