--- a/data.html
+++ b/data.html
@@ -60,6 +60,18 @@
     <p style="text-align: center;">The graph shows the learning curve of Rabbit while training. Rabbit stops improving when its average fitness is around 2000. Afterward, no significant improvement is being made. This can be due to the fact that the rabbit really excels in one area and so it doesn't need to learn more. It is also the case that there is not a significant variation in the population after a while so there is a capacity for how much Rabbit can learn. The fluctuation in the graph later in the learning process could be because of mutation or if Rabbit did something it never did before and carried that trait to the next generation. </p>
     <br>
         <br>
+      
+        <br>
+        <br>
+        <br>
+        <br>
+       
+
+    <img src="Dumpster_Xpilot.png" alt="Computer Man" style="width:100%;height:70%;">
+    <br>
+        <br>
+        <p style="text-align: center;"> The graph above is the result of training our main agent against another Xpilot agent. Production System, Fuzzy Logic and Genetic Algorithms is used to train this agent. Dumpster was able to make significant improvement against the Xpilot agent. However, He stops learning when its fitness score reaches around 600 and that is for the same reasons as when Rabbit stops learning </p>
+        <br>
         <br>
         <br>
         <br>
